# cube

./: Makefile  README.md  pyproject.toml  setup.cfg
app/: concepts.py
app/resources/: algorithms.py  basic.py  oll_states.py  top_layer_states.py
tests/unit/: test_algorithms.py  test_top_layer_state.py
