[tool.poetry]
name = "cube"
version = "0.1.0"
description = ""
authors = ["samdaviesudina <samdaviesudina@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
order_by_type = false
force_sort_within_sections = true

float_to_top = true

sections=["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

known_first_party = ["app"]

